--- a/Cinemalek/appsettings.Development.json
+++ b/Cinemalek/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Integrated Security=True;Initial Catalog=Cinemalek;Encrypt=False;Trust Server Certificate=True;"
   }
 }
